--- a/wiki/templates/wiki/view_page.html
+++ b/wiki/templates/wiki/view_page.html
@@ -25,4 +25,23 @@
     <div class="markdown-content">
         {{ html_content|safe }}
     </div>
+    
+    <script>
+        // Fix wiki link URLs to use the correct format
+        document.addEventListener('DOMContentLoaded', function() {
+            const wikiLinks = document.querySelectorAll('a[data-wiki-link]');
+            const username = '{{ username }}';
+            
+            wikiLinks.forEach(link => {
+                const targetSlug = link.getAttribute('data-wiki-link');
+                const href = link.getAttribute('href');
+                
+                // Replace .html with the correct user/page format
+                if (href && href.endsWith('.html')) {
+                    const newHref = `/user/${username}/${targetSlug}/`;
+                    link.setAttribute('href', newHref);
+                }
+            });
+        });
+    </script>
 {% endblock %}
