--- a/wiki/templates/wiki/home.html
+++ b/wiki/templates/wiki/home.html
@@ -2,6 +2,10 @@
 
 {% block title %}Home - MeBox{% endblock %}
 
+{% block og_title %}Welcome to MeBox - Social Wiki Network{% endblock %}
+
+{% block og_description %}Discover and create wiki pages from our community. Explore recent pages and join the knowledge-sharing network.{% endblock %}
+
 {% block content %}
     <h1>Welcome to MeBox</h1>
     <p>Discover and create wiki pages from our community.</p>
