--- a/wiki/templates/wiki/login.html
+++ b/wiki/templates/wiki/login.html
@@ -2,6 +2,10 @@
 
 {% block title %}Login - MeBox{% endblock %}
 
+{% block og_title %}Login to MeBox - Access Your Wiki Pages{% endblock %}
+
+{% block og_description %}Login to your MeBox account to access your wiki pages, follow other users, and continue sharing knowledge.{% endblock %}
+
 {% block content %}
     <h1>Login</h1>
     <p>Welcome back! Login to access your wiki pages.</p>
