--- a/wiki/templates/wiki/signup.html
+++ b/wiki/templates/wiki/signup.html
@@ -2,6 +2,10 @@
 
 {% block title %}Sign Up - MeBox{% endblock %}
 
+{% block og_title %}Sign Up for MeBox - Join the Social Wiki Network{% endblock %}
+
+{% block og_description %}Create an account and start creating, sharing, and discovering wiki pages in our community.{% endblock %}
+
 {% block content %}
     <h1>Create an Account</h1>
     <p>Join our community and start creating wiki pages.</p>
